--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   },
   "homepage": "https://github.com/peter-house/airbnb-web#readme",
   "devDependencies": {
+    "@babel/core": "^7.13.10",
+    "@babel/preset-env": "^7.13.10",
+    "@babel/preset-react": "^7.12.13",
     "css-loader": "^5.1.3",
     "style-loader": "^2.0.0",
     "webpack": "5.26.3",
