--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "bulid": "webpack"
+    "build": "webpack",
+    "start": "webpack-dev-server"
   },
   "repository": {
     "type": "git",
@@ -19,14 +20,23 @@
   "homepage": "https://github.com/peter-house/airbnb-web#readme",
   "devDependencies": {
     "@babel/core": "^7.13.10",
+    "@babel/plugin-proposal-class-properties": "7.13.0",
     "@babel/preset-env": "^7.13.10",
     "@babel/preset-react": "^7.12.13",
+    "babel-loader": "^8.2.2",
     "css-loader": "^5.1.3",
+    "html-loader": "^2.1.2",
+    "html-webpack-plugin": "^4.5.2",
+    "mini-css-extract-plugin": "1.3.9",
     "style-loader": "^2.0.0",
-    "webpack": "5.26.3",
-    "webpack-cli": "4.5.0"
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
-    "lodash": "^4.17.21"
-  }
+    "lodash": "^4.17.21",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
+  },
+  "keywords": []
 }
