--- a/package.json
+++ b/package.json
@@ -19,24 +19,25 @@
   },
   "homepage": "https://github.com/peter-house/airbnb-web#readme",
   "devDependencies": {
-    "@babel/core": "^7.13.10",
+    "@babel/core": "7.13.10",
     "@babel/plugin-proposal-class-properties": "7.13.0",
-    "@babel/preset-env": "^7.13.10",
-    "@babel/preset-react": "^7.12.13",
-    "babel-loader": "^8.2.2",
-    "css-loader": "^5.1.3",
-    "html-loader": "^2.1.2",
-    "html-webpack-plugin": "^4.5.2",
+    "@babel/preset-env": "7.13.12",
+    "@babel/preset-react": "7.12.13",
+    "babel-loader": "8.2.2",
+    "css-loader": "5.1.3",
+    "html-loader": "2.1.2",
+    "html-webpack-plugin": "4.5.2",
     "mini-css-extract-plugin": "1.3.9",
-    "style-loader": "^2.0.0",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.2"
+    "style-loader": "2.0.0",
+    "webpack": "4.46.0",
+    "webpack-cli": "3.3.12",
+    "webpack-dev-server": "3.11.2"
   },
   "dependencies": {
-    "lodash": "^4.17.21",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "lodash": "4.17.21",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   },
-  "keywords": []
+  "keywords": [],
+  "main": "webpack.config.js"
 }
