--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "start": "webpack-dev-server"
+    "start": "webpack serve"
   },
   "repository": {
     "type": "git",
@@ -25,12 +25,11 @@
     "@babel/preset-react": "7.12.13",
     "babel-loader": "8.2.2",
     "css-loader": "5.1.3",
-    "html-loader": "2.1.2",
     "html-webpack-plugin": "4.5.2",
     "mini-css-extract-plugin": "1.3.9",
     "style-loader": "2.0.0",
     "webpack": "4.46.0",
-    "webpack-cli": "3.3.12",
+    "webpack-cli": "4.5.0",
     "webpack-dev-server": "3.11.2"
   },
   "dependencies": {
