--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
     "webpack-dev-server": "3.11.2"
   },
   "dependencies": {
+    "@emotion/core": "^11.0.0",
+    "@emotion/css": "^11.1.3",
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.1.5",
     "lodash": "4.17.21",
     "react": "17.0.2",
     "react-dom": "17.0.2"
