--- a/package.json
+++ b/package.json
@@ -37,6 +37,10 @@
     "@emotion/css": "11.1.3",
     "@emotion/react": "11.1.5",
     "@emotion/styled": "11.1.5",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-brands-svg-icons": "^5.15.3",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "lodash": "4.17.21",
     "react": "17.0.2",
     "react-dom": "17.0.2"
