--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "@babel/preset-react": "7.12.13",
     "babel-loader": "8.2.2",
     "css-loader": "5.1.3",
+    "eslint": "^7.23.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-html": "^6.1.2",
+    "eslint-plugin-import": "^2.22.1",
     "html-webpack-plugin": "4.5.2",
     "mini-css-extract-plugin": "1.3.9",
     "style-loader": "2.0.0",
