--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "webpack-dev-server": "3.11.2"
   },
   "dependencies": {
+    "@babel/runtime": "^7.13.10",
     "@emotion/core": "11.0.0",
     "@emotion/css": "11.1.3",
     "@emotion/react": "11.1.5",
@@ -46,9 +47,14 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "axios": "^0.21.1",
+    "date-fns": "^2.19.0",
     "lodash": "4.17.21",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "moment": "^2.29.1",
+    "react": "^16.14.0",
+    "react-date-range": "^1.1.3",
+    "react-dates": "^21.8.0",
+    "react-dom": "^16.14.0",
+    "react-with-direction": "^1.3.1"
   },
   "keywords": [],
   "main": "webpack.config.js"
