--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "type": "git",
     "url": "git+https://github.com/peter-house/airbnb-web.git"
   },
-  "author": "",
+  "author": "grace kim",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/peter-house/airbnb-web/issues"
