--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@babel/core": "7.13.10",
     "@babel/plugin-proposal-class-properties": "7.13.0",
+    "@babel/plugin-transform-runtime": "^7.14.2",
     "@babel/preset-env": "7.13.12",
     "@babel/preset-react": "7.12.13",
     "babel-loader": "8.2.2",
@@ -37,7 +38,7 @@
     "webpack-dev-server": "3.11.2"
   },
   "dependencies": {
-    "@babel/runtime": "7.13.10",
+    "@babel/runtime": "^7.13.10",
     "@emotion/core": "11.0.0",
     "@emotion/css": "11.1.3",
     "@emotion/react": "11.1.5",
